--- a/style.css
+++ b/style.css
@@ -7,17 +7,56 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
-.header{
-    width: 100%;
-    height: 100vh;
-    background-image: url(background3.png);
-    background-color: rgba(0, 0, 0, 0.2);
-    background-blend-mode: multiply;
-    background-position: center;
-    background-size: cover;
-    padding: 0 7%;
-    transition: background-image .5s;
+
+body{
+    background-color: black;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
+
+.header{
+    position: relative;
+    z-index: 3;
+    padding: 0 7%;
+    width: 100%;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.main {
+    position: relative;
+    padding: 0 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 100vh;
+}
+
+.paragraph {
+    flex: 1;
+    max-width: 35%;
+    color: rgb(255, 255, 255);
+    position:relative;
+    z-index: 2;
+    font-size: 1vw;
+    padding-left: 30px;
+}
+
+.renders{
+    opacity: .9;
+    transform: scale(1.5);
+    flex: 1;
+    max-width: 100%;
+    position:relative;
+    z-index: 1;
+}
+
+.renders img {
+    height: auto; /* Maintains aspect ratio */
+    max-width: 100%; /* Image takes up to 100% of the .renders width */  
+}
+
 nav{
     padding-top:  20px;
     position: fixed;
@@ -30,8 +69,9 @@ nav{
 }
 
 .logo{
-    width: 350px;
-    cursor: pointer;
+    width: 25vw;
+    height: auto;
+    /*cursor: pointer;*/
     padding-left: 7%;
 }
 
@@ -41,16 +81,21 @@ nav .btn{
     color: #fff;
     text-decoration: none;
     border: 1px solid #fff;
-    padding: 10px 30px;
-    border-radius: 30px;
+    padding-top: .7vw; /* Example: Adjust as needed */
+    padding-bottom: .7vw;
+    padding-right: 2.1vw;
+    padding-left: 2.1vw;
+    border-radius: 5vw; /* Example: Adjust as needed */
     float: right;
-    margin-right: 7%;
+    margin-right: 7%; /* Example: Adjust as needed */
+    font-size: 1.0vw; /* Example: Adjust as needed */
 
 }
 nav .btn:hover{
     color: rgba(255, 255, 255, 0.315);
     border-color: rgba(255, 255, 255, 0.315);
 }
+
 .info{
     width: 100%;
     padding: 0 7%;
@@ -60,13 +105,14 @@ nav .btn:hover{
     position: fixed;
     bottom: 50px;
     left: 0;
+    z-index: 1;
 }
 .info div{
     margin: 0 20px;
 }
 .info iv h2{
     font-size: 44px;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .info .line{
@@ -75,15 +121,7 @@ nav .btn:hover{
     height: 4px;
 }
 
-.paragraph {
-    max-width: 450px;
-    margin-left: 10px;
-    align-items: center;
-    color: rgb(255, 255, 255);
-    position: fixed;
-    top: 30%;
-    bottom: 70%;
-}
+
 
 .red {
     color: rgb(215, 5, 5);
@@ -91,4 +129,74 @@ nav .btn:hover{
 
 .patent {
     font-size: 13px;
+}
+
+@media screen and (max-width: 768px) {
+    *{
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+    .main {
+        flex-direction: column; /* Stack elements vertically */
+        justify-content: center;
+        align-items: center; /* Stretch elements to fill the width */
+        padding: 0 2%; /* Adjust padding for smaller screens */
+        min-height: 100vh; /* Minimum height of the viewport */
+        height: auto;
+        /* Other adjustments for mobile as needed */
+    }
+
+    .main .paragraph {
+        margin-bottom: 10px;
+    }
+
+    .main > *{
+        flex: 1;
+    }
+
+    .paragraph{
+        margin-top: 90px;
+        font-size: 2.3vw;
+        max-width: 80%;
+        overflow: hidden;
+        margin-bottom: -400px;
+        margin-left: 10px;
+        text-align: left;
+    }
+    .renders{
+        overflow: hidden;
+    }
+
+    .logo {
+        width: 40vw;
+    }
+    
+    nav .btn{
+        letter-spacing: .2em;
+        transition: all .2s ease-in-out;
+        color: #fff;
+        text-decoration: none;
+        border: 1px solid #fff;
+        padding-top: .7vw; /* Example: Adjust as needed */
+        padding-bottom: .7vw;
+        padding-right: 2.5vw;
+        padding-left: 2.5vw;
+        border-radius: 6vw; /* Example: Adjust as needed */
+        float: right;
+        margin-right: 10%; /* Example: Adjust as needed */
+        font-size: 2.0vw; /* Example: Adjust as needed */
+    }
+
+    .info {
+        position: static;
+        flex-direction: column-reverse;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .header{
+        transition: opacity 0.5s ease-in-out;
+
+    }
 }
